This document is an overview of what new features are included

AWAY is now propogated.  

The conf file format has been vastly improved.  The old conf format is 
no longer supported.  Many options that were defined at compile time are
now set in the config file.

Unauthorized connection notices have been moved to the +u user mode.

A new drone warning mode has been added... +e.

Server side ignore is included for all users.  Setting user mode +g will
make you ignore all private messages.  Channel messages are not affected.
People who you wish to communicate with can be permitted with the
/quote ACCEPT nick command.  The current accept list can be seen with
/quote ACCEPT *, and nicks can be removed with /quote ACCEPT -nick.
When a user tries to message you when you are set +g, and they are not
on the accept list, they will receive a message saying you are on server
side ignore.  You will also receive a message, but it is paced, so you will
only receive a notification every 60 seconds.

Channels are also flood controlled.  Sending too many messages to a channel
when you are not opped or voiced will cause the server to block the flood 
after a certain amount of lines.  Opers can change the number of lines with 
/quote SET FLOODCOUNT.  The default is currently 8 lines.  A side effect
of this is that channel CTCP's will be throttled for non ops.

Half ops are included.  Setting a user +h in a channel will give them half-op
privilages.  Half ops can kick regular users but not full ops.

Channel Op Hiding is included as a channel mode.  By setting a channel +a, 
the ops are hidden to non-ops.  Once a user receives ops or halfops, they
may have to issue a NAMES command to resync their userlist.

Server hiding is also a conf file option.  With this option enabled, only 
opers can see what server a user is on.  TRACE and LTRACE are disabled for
non-opers, LINKS, WHO, WHOIS and the like are modified to not show a server.
Note that this can break certain clients.
