@@ -1,5 +1,5 @@
 # Hybrid 7 Example configuration file
-# $Id: example.conf,v 7.47 2001/01/08 15:45:55 wcampbel Exp $
+# $Id: example.conf,v 7.48 2001/01/09 19:11:58 wcampbel Exp $
 # December 2000 - ejb, wcampbel, db and others
 
 # All comments start with the # sign.
@@ -289,7 +289,7 @@ general {
 	# a notice to opers on the server, but still allow the connection.
 	# Overrides the compiled in defaults
 	ts_warn_delta=30;
-	ts_max_delta=90;
+	ts_max_delta=300;
 
 	# When a user QUIT's, prepend their QUIT message with "Client exit:"
 	# in order to help prevent against faking server error messages (ie.
